refatorar controle operacional imp